# pooledsmtp

./: Cargo.toml  LICENSE  README.md
src/: email.rs  header.rs  lib.rs  pool.rs  smtp.rs
tests/: email_bytes.rs  email_parse.rs  pool.rs
tests/common/: mod.rs
